# sara_qt

./: .gitignore  CHelper_Thread.cpp  CHelper_Thread.h  CMakeLists.txt  README.md  launcher-debug.sh  launcher.sh  package.xml  sara_core.sh  sara_ui.desktop  sara_ui.pro  sara_ui.pro.user.9d56b72  sara_ui.pro.user.bcf932c  test.py  test2.py  ui_scenario.scenario
devel/: .catkin  .rosinstall  setup.sh
devel/lib/Sara_QT_Test1/: sara_qt_try  sara_qt_window  turtle_tutorial_node  turtle_tutorial_publisher
devel/lib/pkgconfig/: Sara_QT_Test1.pc  turtle_tutorial.pc
devel/lib/turtle_tutorial/: turtle_tutorial_node  turtle_tutorial_publisher
devel/share/Sara_QT_Test1/cmake/: Sara_QT_Test1Config.cmake
devel/share/turtle_tutorial/cmake/: turtle_tutorialConfig.cmake
helper/: helper.cpp  helper.h  helper_funct.cpp
launch/: arm_test.launch  core_helper.launch  helper.launch  pi_core_helper.launch  pi_ui.launch  pi_ui_autolaunch.launch  sara_ui.launch  sara_ui_autolaunch.launch  test_ui.launch
mockup/: sara_ui.mp
msg/: sara_launch.msg
sara_qt_test1/: CMakeLists.txt  package.xml
sara_qt_test1/src/: cthreadtopicssubscriber.cpp  cthreadtopicssubscriber.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sara_qt_test1.pro  subscribe.cpp
src/: CHelper_Launcher.cpp  CHelper_Launcher.h  CHelper_Thread.cpp  CHelper_Thread.h  CScenario.cpp  CScenario.h  CScenarios.cpp  CScenarios.h  CThreadDiagnostics.cpp  CThreadDiagnostics.h  CThreadRos.cpp  CThreadRos.h  cscenario.cpp  cscenario.h  cthreadtopicssubscriber.cpp  cthreadtopicssubscriber.h  helper.cpp  helper.h  helper_funct.cpp  main.cpp  mainwindow.cpp  mainwindow.h  monitors.h  roslaunch_message.h
src/sara_qt_test1/: CMakeLists.txt  package.xml
src/sara_qt_test1/build-sara_qt_test1-Desktop_Qt_5_8_0_GCC_64bit-Debug/: Makefile  ui_mainwindow.h
src/sara_qt_test1/src/: main.cpp  mainwindow.cpp  mainwindow.ui  publisher.cpp  sara_qt_test1.pro
src/turtle_tutorial/: CMakeLists.txt
src/turtle_tutorial/src/: dialog.cpp  dialog.h  dialog.ui  hello.cpp  ui_dialog.h  with_qt.cpp
tests/: helper.cpp  helper.h  helper_funct.cpp  list_topic.cpp  logs.cpp  subscribe.cpp
ui/: mainwindow.ui  mainwindow.ui.autosave
